# tiny-chat-microservices

./: README.md  pyproject.toml
chat/common/: setup.py
chat/front/: app.py  main.py  routes.py
chat/front/base/: app.py  chat.py  page.py  status_bar.py
chat/front/models/: chat.py  friend.py  message.py  user.py  websocket.py
chat/front/network/: http.py  tasks.py  ws.py
chat/front/rpc/: ws_pb2.py
chat/front/sessions/: chat.py  manager.py  user.py
chat/front/ui/: add_friend_page.py  chat_list.py  chat_session_page.py  entry_page.py  friend_action_history.py  friend_list.py  friend_page.py  login_page.py  main_page.py  register_page.py  user_info_page.py
chat/front/utils/: backoff.py  circuit_breaker.py  context.py  exceptions.py  terminal.py  widget.py
chat/http_gateway/: conf.yaml  creator.py  http_gateway.py
chat/http_gateway/middlewares/: allow_or_deny.py  auth.py  prometheus.py  ratelimiter.py
chat/http_gateway/rmq/: service.py
chat/http_gateway/routes/: chat.py  friend.py  user.py
chat/http_gateway/rpc/: auth_service.py  cass_storage_service.py  snowflake_service.py  transfer_service.py  user_service.py
chat/http_gateway/utils/: auth.py  background_tasks.py  email.py  helper.py  service_ctx.py  setting.py  types.py
chat/microservices/auth/: auth_handler.py  auth_server.py  auth_service.py  conf.yaml  factory.py
chat/microservices/cass_msg_storage/: cass_storage_service.py  conf.yaml  db_service.py  factory.py
chat/microservices/downstream/: conf.yaml  downstream_server.py  downstream_service.py  factory.py
chat/microservices/push/: conf.yaml  factory.py  push_server.py  push_service.py
chat/microservices/snowflake/: conf.yaml  factory.py  snowflake_server.py  snowflake_service.py
chat/microservices/upstream/: conf.yaml  factory.py  (+1 more)
chat/worker/: email_starter.py  multiworker_starter.py
chat/ws_gateway/: conf.yaml  creator.py  lifespan.py  ws_gateway.py
(+210 files in other folders)
